<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        tools:context="com.quiz_app.quiz_app.MainActivity">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q1"
                style="@style/texThemQ"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q1_text"
                android:layout_marginBottom="5dp"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q1Choice1" />

                <RadioButton
                    android:id="@+id/radioButton12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q1Choice2" />

                <RadioButton
                    android:id="@+id/radioButton13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q1Choice3" />

                <RadioButton
                    android:id="@+id/radioButton14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q1Choice4" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q2"
                style="@style/texThemQ" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q2_text"
                android:layout_marginBottom="5dp"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q2Choice1" />

                <RadioButton
                    android:id="@+id/radioButton22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q2Choice2" />

                <RadioButton
                    android:id="@+id/radioButton23"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q2Choice3" />

                <RadioButton
                    android:id="@+id/radioButton24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q2Choice4" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q3"
                style="@style/texThemQ" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3_text"
                android:layout_marginBottom="5dp"
                android:textSize="20sp" />


            <CheckBox
                android:id="@+id/Q3Answer31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3Choice1"/>

            <CheckBox
                android:id="@+id/Q3Answer32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3Choice2"/>

            <CheckBox
                android:id="@+id/Q3Answer33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q3Choice3"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q4"
                style="@style/texThemQ" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q4_text"
                android:layout_marginBottom="5dp"/>


            <EditText
                android:id="@+id/Q4Answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/Q4_hint" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Q5"
                style="@style/texThemQ" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Q5_text"
                android:layout_marginBottom="5dp"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroup5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioButton51"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q5Choice1" />

                <RadioButton
                    android:id="@+id/radioButton52"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q5Choice2" />

                <RadioButton
                    android:id="@+id/radioButton53"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q5Choice3" />

                <RadioButton
                    android:id="@+id/radioButton54"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Q5Choice4" />

            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/SubmitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/SubmitButton" />

            <Button
                android:id="@+id/ResutButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="RestButton"
                android:text="@string/RestButton" />


        </LinearLayout>




    </LinearLayout>



</ScrollView>